Fix overflowing long words on modal content

--- a/frontend/src/shared.scss
+++ b/frontend/src/shared.scss
@@ -520,6 +520,7 @@ textarea {
   text-align: center;
   width: 458px;
   margin-bottom: 48px;
+  word-break: break-all;
   svg {
     margin-top: 28px;
     margin-bottom: 55px;
